config/k8s/api-gateway/ingress/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=keycloak-oidc
            - --client-id=skyclient
            - --client-secret=1UA0cD5RHhcJRKzk35q8AcDInbjrmfAg
            - --redirect-url=https://oauth.mocklab.io/oauth/authorize
            - --oidc-issuer-url=https://keycloak.192.168.59.103.nip.io/realms/skyrealm
#            - --allowed-role=<realm role name> // Optional, required realm role
#            - --allowed-role=<client id>:<client role name> // Optional, required client role

#            for supporting PKCE methods from keycloak
            - --code-challenge-method="S256"
#            for error with x509 certificates
            - --ssl-insecure-skip-verify=true
            - --ssl-upstream-insecure-skip-verify=true

#            additional required parameters
            - --email-domain=*
            - --cookie-secure=false
            - --cookie-secret=SEEECRETXXXXXXXX

          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
