config/k8s/api-gateway/ingress/keycloak-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    konghq.com/strip-path: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - skyhost
  rules:
    - host: skyhost
      http:
        paths:
          - path: /keycloak(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
